--- a/login.html
+++ b/login.html
@@ -1,16 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="./Styles/login.css" />
     <title>Charanos</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="form-wrapper">
-        <form action="" class="form">
-            
-        </form>
+      <form action="" class="form">
+        <img src="./Images/Avatars/avt6.jpeg" alt="avt" />
+        <h2>login</h2>
+
+        <div class="input-group">
+          <input type="text" name="loginUser" id="loginUser" required />
+          <label for="loginUser">username</label>
+        </div>
+        <div class="input-group">
+          <input type="password" name="loginPwd" id="loginPwd" required />
+          <label for="loginPwd">password</label>
+        </div>
+        
+        <div class="checkRem">
+          <input type="checkbox" name="rem" id="rem" />
+          <label for="rem">remember me</label>
+        </div>
+        <input type="submit" value="login" class="submit-btn" />
+
+        <a href="#forgot-pwd" class="forgot-pwd">forgot password ?</a>
+
+        <div id="forgot-pwd">
+          <form action="" class="form">
+            <a href="#" class="close">&times;</a>
+            <h2>reset password</h2>
+            <div class="input-group">
+              <input type="email" name="email" id="email" required />
+              <label for="email">email</label>
+            </div>
+            <input type="submit" value="submit" class="submit-btn" />
+          </form>
+        </div>
+      </form>
     </div>
-</body>
+  </body>
 </html>
